Closed Bug 2037565 Opened 25 days ago Closed 20 days ago

Incorrect focus handling for remote frame in shadow dom

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect

Tracking

()

RESOLVED FIXED
152 Branch
Tracking Status
firefox152 --- fixed

People

(Reporter: vhilla, Assigned: vhilla)

References

Details

Attachments

(1 file)

Navigating via tab into a remote iframe that is embedded in a shadow DOM doesn't seem to work right. On first tab press, nothing appears to be focused and on second tab press, the last focused element in the remote regains focus.

Comparing GetNextTabbableContent and GetNextTabbableContentInScope, we probably miss calls to NavigateByKey.

See bug 2027108 comment 6 for a test case and the bug overall for more debugging.

Assignee: nobody → vhilla
Blocks: 2027108
Blocks: 2037529
Severity: -- → S3
Pushed by vhilla@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/39f8ddc5c29b https://hg.mozilla.org/integration/autoland/rev/8252e42c95e0 Call NavigateByKey for OOP frames found via shadow DOM scope traversal. r=hsivonen
Status: NEW → RESOLVED
Closed: 20 days ago
Resolution: --- → FIXED
Target Milestone: --- → 152 Branch
Duplicate of this bug: 2027108
QA Whiteboard: [qa-triage-done-c153/b152]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: