Bug 2037565 - Call NavigateByKey for OOP frames found via shadow DOM scope traversal. r=hsivonen

Differential Revision: https://phabricator.services.mozilla.com/D298825